# wasmAcademy

./: README.md
counting-contract/: Cargo.toml
counting-contract-0.2/schema/raw/: instantiate.json
counting-contract-0.2/src/: contract.rs  lib.rs  msg.rs  multitest.rs  state.rs
counting-contract-0.2/src/multitest/: tests.rs
counting-contract-0.3/: Cargo.toml
counting-contract-0.3/src/: contract.rs  lib.rs  msg.rs  multitest.rs  state.rs
counting-contract-0.3/src/multitest/: tests.rs
counting-contract/src/: contract.rs  lib.rs  multitest.rs  state.rs
counting-contract/src/multitest/: tests.rs
